update dependencies, and use jayferd's jimtcl

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:jayferd/jim-ncurses
 [submodule "deps/jimtcl"]
 	path = deps/jimtcl
-	url = git://github.com/msteveb/jimtcl
+	url = git://github.com:jayferd/jimtcl
